--- a/common.ja_JP.po
+++ b/common.ja_JP.po
@@ -5,6 +5,7 @@
 # Translators:
 # 8fb942b4466cdbffede843a6379dce7e_4dc4284 <cbc8558ff26f685f62baa2a2eaee30b3_1013263>, 2021
 # Antoni Das <Antonidas159@gmail.com>, 2017
+# Antonio <piuntn@gmail.com>, 2023
 # LegendGuard, 2020
 # LegendGuard, 2020-2023
 # Lento <securemailfor28-xonotic@yahoo.co.jp>, 2015
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-08 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: RYU N. <ryusho2523@yahoo.co.jp>, 2021\n"
+"Last-Translator: Antonio <piuntn@gmail.com>, 2023\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/team-xonotic/"
 "xonotic/language/ja_JP/)\n"
 "Language: ja_JP\n"
@@ -10200,7 +10201,7 @@ msgstr "公式設定"
 
 #: qcsrc/menu/xonotic/serverlist.qh:152
 msgid "SLCAT^Favorites"
-msgstr "好きなサーバー:"
+msgstr "好きなサーバー"
 
 #: qcsrc/menu/xonotic/serverlist.qh:153
 msgid "SLCAT^Recommended"
