--- a/common.ru.po
+++ b/common.ru.po
@@ -26,7 +26,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-08 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Артём Котлубай, 2022\n"
+"Last-Translator: Andrei Stepanov, 2014-2023\n"
 "Language-Team: Russian (http://www.transifex.com/team-xonotic/xonotic/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -4517,7 +4517,7 @@ msgid ""
 "Keep fragging until we have a winner!"
 msgstr ""
 "^F2Теперь идёт ^F4ДОПОЛНИТЕЛЬНОЕ ВРЕМЯ^F2!\n"
-"Продолжайте набор фрагов, пока не определится победитель!"
+"Продолжайте набирать фраги, пока не определится победитель!"
 
 #: qcsrc/common/notifications/all.inc:749
 msgid ""
@@ -4525,7 +4525,7 @@ msgid ""
 "Keep scoring until we have a winner!"
 msgstr ""
 "^F2Теперь идёт ^F4ДОПОЛНИТЕЛЬНОЕ ВРЕМЯ^F2!\n"
-"Зарабатывайте очки, пока не определится победитель!"
+"Продолжайте зарабатывать очки, пока не определится победитель!"
 
 #: qcsrc/common/notifications/all.inc:750
 msgid ""
